# docy

./: .envrc  .gitignore  agent.py  alembic.ini  chroma_client.py  docker-compose.yml  docs.md  github_scraper.py  logger.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  repomix-output.xml  requirements.txt  settings.py  test_stream.py  todo_app_devspec.md  tools.md
chroma/: chroma.sqlite3
database/: __init__.py  db.py
frontend/: astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  client.ts  content.config.ts  main.ts  schema.d.ts
frontend/src/assets/: base.css
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/: CreateModal.vue  DataTable.vue  NavigationHeader.vue  ProjectCombobox.vue  SideBar.vue  Sidebar.astro  Tabs.vue  Task.vue
frontend/src/components/projects/: ProjectCard.vue
frontend/src/components/static/: Banner.astro  Card.astro  Navbar.astro  Tab.astro
frontend/src/layouts/: AppLayout.vue  Layout.astro
frontend/src/pages/: agent.astro  index.astro
frontend/src/queries/: projects.ts
frontend/src/router/: index.ts
frontend/src/stores/: agent.ts  chat.ts  client.ts  file.ts  project.ts  task.ts
frontend/src/styles/: global.css
frontend/src/views/: AgentsView.vue  FilesView.vue  HomeView.vue  PlaygroundView.vue  ProjectDetailView.vue  ProjectView.vue  SettingsView.vue
models/: __init__.py  agent.py  base.py  collection.py  project.py  prompt.py  task.py  user.py
pages/: app.py  chat.py  chat_interface.py  config.py
repositories/: __init__.py  agent.py  base.py  project.py  project_artifact.py  prompt.py  task.py  user.py
routers/: __init__.py  agent.py  artifact.py  chroma.py  notes.py  project.py  task.py  user.py
services/: __init__.py  chroma.py  chroma_service.py  github.py  github_service.py  milvus.py  note_service.py  task_service.py  transcribe.py  vectordb.py
src/docy/: auth.py  main.py  task_cli.py
src/docy/api/: __init__.py
src/docy/core/: config.py
src/docy/db/: __init__.py  init_db.py  session.py
src/docy/models/: __init__.py  agent.py  artifact.py  base.py  chat.py  document.py  message.py  project.py  prompt.py  task.py  user.py
src/docy/repositories/: __init__.py  agent.py  base.py  chat.py  document.py  message.py  project.py  task.py
src/docy/schemas/: __init__.py  agent.py  artifact.py  chat.py  message.py  project.py  task.py  user.py
src/docy/services/: exceptions.py  github_service.py  note_service.py  project.py  pygame_test.py  task.py  worker.py
src/docy/templates/: index.html
src/docy/utils/: get_logger.py
src/docy/workflows/: cli.py
src/drive/: config.py  mcp_client.py  mcp_server.py  mcp_sse_client.py
src/drive/models/: __init__.py  results.py  validation.py
src/embedding_tool/: main.py
src/matter/: auth.py  main.py  mcp_server.py
src/matter/api/: __init__.py
src/matter/db/: engine.py
src/matter/models/: __init__.py  agent.py  artifact.py  base.py  project.py  prompt.py  task.py  user.py
src/matter/repositories/: __init__.py  agent.py  artifact.py  base.py  project.py  prompt.py  task.py  user.py
src/matter/schemas/: __init__.py  agent.py  artifact.py  project.py  prompt.py  task.py  user.py
src/matter/services/: chroma_service.py  exceptions.py  github_service.py  task_service.py
src/matter/utils/: system_prompts.py
src/tests/: conftest.py
src/todo_app/: gt_config.json  main.py  models.py  test_file.py
src/workspace/: config.py  dependencies.py  interactive_cli.py  mcp_client.py  server.py
src/workspace/agents/: common.py
src/workspace/models/: __init__.py  results.py  validation.py
src/workspace/tools/: file_system.py  task.py  web.py
workflows/: agent.py  base.py  interactive.py
(+23 files in other folders)
