[project]
name = "docy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "crawl4ai>=0.5.0.post4",
    "fastapi[standard]>=0.115.11",
    "load-dotenv>=0.1.0",
    "logfire>=3.7.1",
    "pgvector>=0.3.6",
    "psycopg2>=2.9.10",
    "pydantic-ai>=0.0.36",
    "pydantic-ai-slim[groq]>=0.0.36",
    "pygithub>=2.6.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.4.1",
    "sqlmodel>=0.0.24",
    "streamlit>=1.43.2",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "N", "B"]
[tool.pyright]
venvPath = "."
venv = ".venv"
