[project]
name = "docy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "crawl4ai>=0.5.0.post4",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "load-dotenv>=0.1.0",
    "logfire>=3.7.1",
    "mcp[cli]>=1.5.0",
    "pgvector>=0.3.6",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic-ai>=0.0.36",
    "pydantic-ai-slim[groq]>=0.0.36",
    "pydantic-settings>=2.8.1",
    "pygithub>=2.6.1",
    "pymilvus>=2.5.5",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "sentence-transformers>=3.4.1",
    "sqlmodel>=0.0.24",
    "streamlit>=1.43.2",
    "transformers>=4.49.0",
    "typer>=0.15.2",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "N", "B"]
[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
