[project]
name = "docy"
version = "0.1.0"
description = "Docy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.11.12",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "autogen-agentchat>=0.2.40",
    "chromadb>=0.6.3",
    "crawl4ai>=0.5.0.post4",
    "devtools>=0.12.2",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.115.11",
    "google-genai>=1.9.0",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "load-dotenv>=0.1.0",
    "logfire[sqlalchemy]>=3.7.1",
    "mcp[cli]>=1.5.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.3.6",
    "poethepoet>=0.33.1",
    "prompt-toolkit>=3.0.50",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pudb>=2024.1.3",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.52",
    "pydantic-ai-slim[duckduckgo]>=0.0.52",
    "pydantic-settings>=2.8.1",
    "pygame>=2.6.1",
    "pygithub>=2.6.1",
    "pymilvus>=2.5.5",
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "ruff>=0.11.2",
    "sentence-transformers>=3.4.1",
    "sqlmodel>=0.0.24",
    "transformers>=4.49.0",
    "typer[all]>=0.15.2",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "N", "B"]
ignore = ["E501", "F401", "E711", "B008"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.13"
exlude = ["**/node_modules"]
typeCheckingMode = "standard"

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.poe.tasks]
run_dev = "fastapi dev src/docy/main.py"
run_agent = "uv run src/docy/common/agents/main.py"
